# KomodoEngine

./: CMakeLists.txt  LogManager.h  Manager.h  README.md  main.cpp
src/: GameManager.cpp  GameManager.h  LogManager.cpp  LogManager.h
src/entity_system/components/: AiComponent.cpp  AiComponent.h  Component.h  PositionComponent.cpp  PositionComponent.h
src/entity_system/framework/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/utils/: Clock.cpp  Clock.h  Vector3.cpp  Vector3.h
